@@ -38,6 +38,9 @@ has been removed (see below).
 always possible, independently of the language context. It is never
 implicit: a popup will show up unconditionally.
 
+* Additional abbreviations for syntactic completion may be specified in
+$ISABELLE_HOME/etc/abbrevs and $ISABELLE_HOME_USER/etc/abbrevs.
+
 * Improved scheduling for urgent print tasks (e.g. command state output,
 interactive queries) wrt. long-running background tasks.
 
